// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshots renders transform equivalently when assigning prop as string or object 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight={16}
  bbWidth={16}
  focusable={false}
  height={16}
  meetOrSlice={0}
  minX={0}
  minY={0}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      Object {},
      Object {
        "flex": 0,
        "height": 16,
        "width": 16,
      },
    ]
  }
  vbHeight={512}
  vbWidth={640}
  width={16}
>
  <RNSVGGroup>
    <RNSVGGroup
      matrix={
        Array [
          1,
          0,
          0,
          1,
          320,
          256,
        ]
      }
    >
      <RNSVGGroup
        matrix={
          Array [
            0.4375,
            0,
            0,
            0.4375,
            128,
            0,
          ]
        }
      >
        <RNSVGPath
          d="M1z"
          fill={4278190080}
          matrix={
            Array [
              1,
              0,
              0,
              1,
              -320,
              -256,
            ]
          }
          propList={
            Array [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGGroup>
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`snapshots renders with icon object prop 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight={16}
  bbWidth={16}
  focusable={false}
  height={16}
  meetOrSlice={0}
  minX={0}
  minY={0}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      Object {},
      Object {
        "flex": 0,
        "height": 16,
        "width": 16,
      },
    ]
  }
  vbHeight={512}
  vbWidth={640}
  width={16}
>
  <RNSVGGroup>
    <RNSVGPath
      d="M1z"
      fill={4278190080}
      propList={
        Array [
          "fill",
        ]
      }
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`snapshots renders with icon specified as array from the library 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight={16}
  bbWidth={16}
  focusable={false}
  height={16}
  meetOrSlice={0}
  minX={0}
  minY={0}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      Object {},
      Object {
        "flex": 0,
        "height": 16,
        "width": 16,
      },
    ]
  }
  vbHeight={512}
  vbWidth={640}
  width={16}
>
  <RNSVGGroup>
    <RNSVGPath
      d="M1z"
      fill={4278190080}
      propList={
        Array [
          "fill",
        ]
      }
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`snapshots renders with mask and transform 1`] = `
<RNSVGSvgView
  align="xMidYMid"
  bbHeight={16}
  bbWidth={16}
  focusable={false}
  height={16}
  meetOrSlice={0}
  minX={0}
  minY={0}
  style={
    Array [
      Object {
        "backgroundColor": "transparent",
        "borderWidth": 0,
      },
      Object {},
      Object {
        "flex": 0,
        "height": 16,
        "width": 16,
      },
    ]
  }
  vbHeight={512}
  vbWidth={640}
  width={16}
>
  <RNSVGGroup>
    <RNSVGDefs>
      <RNSVGClipPath
        name="clip-m1"
      >
        <RNSVGPath
          d="M1z"
          fill={4278190080}
          propList={
            Array [
              "fill",
            ]
          }
        />
      </RNSVGClipPath>
      <RNSVGMask
        height="100%"
        maskContentUnits={1}
        maskTransform={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
        maskUnits={1}
        name="mask-m1"
        width="100%"
        x={0}
        y={0}
      >
        <RNSVGRect
          fill={4294967295}
          height="100%"
          propList={
            Array [
              "fill",
            ]
          }
          width="100%"
          x={0}
          y={0}
        />
        <RNSVGGroup
          matrix={
            Array [
              1,
              0,
              0,
              1,
              320,
              256,
            ]
          }
        >
          <RNSVGGroup
            matrix={
              Array [
                0.4375,
                0,
                0,
                0.4375,
                128,
                0,
              ]
            }
          >
            <RNSVGPath
              d="M2z"
              fill={4278190080}
              matrix={
                Array [
                  1,
                  0,
                  0,
                  1,
                  -320,
                  -256,
                ]
              }
              propList={
                Array [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGGroup>
      </RNSVGMask>
    </RNSVGDefs>
    <RNSVGRect
      clipPath="clip-m1"
      fill={4278190080}
      height="100%"
      mask="mask-m1"
      propList={
        Array [
          "fill",
        ]
      }
      width="100%"
      x={0}
      y={0}
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;
